# module-tibrv

./: ChangeLog  Makefile.am  README  RELEASE-NOTES  configure.ac  libtool  qore-tibrv-module.spec
docs/: tibrv-module-doc.html
docs/docbook/: Makefile  bookinfo.docbook  module.docbook  tibrv-module.docbook
src/: Makefile.am  QoreTibrvTransport.cc  tibrv-module.cc  tibrv-module.h
test/: tibrv-test.q
